tests/pass/compare-pointers-valid.co

struct A
	attr x	: Int32

struct B : A

struct C : A

function main

	var a = nil (A)
	var b = nil (B)
	var c = nil (C)
	
	return a == c
