tests/fail/compare-pointers-invalid.co

function main

	var a = nil (A)
	var b = nil (B)
	var c = nil (C)
	
	return b == c

struct A
	attr x	: Int32

struct B : A

struct C : A
